--- a/app/src/main/res/layout/fragment_tutor_register.xml
+++ b/app/src/main/res/layout/fragment_tutor_register.xml
@@ -1,101 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".TutorRegisterFragment">
+    tools:context=".TutorRegisterFragment" android:background="@drawable/background">
 
     <TextView
         android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Username"
-        android:textSize="20sp" />
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/black"
+        android:text="Username:"
+        android:textSize="25dp" />
 
     <EditText
         android:id="@+id/usernameIn"
+        android:layout_below="@+id/username"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></EditText>
+        ></EditText>
 
     <TextView
         android:id="@+id/password"
+        android:layout_below="@+id/usernameIn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/black"
         android:text="Password"
-        android:textSize="20sp" />
+        android:textSize="25dp" />
 
     <EditText
         android:id="@+id/passwordInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></EditText>
-    <TextView
-        android:id="@+id/courses"
-        android:layout_width="match_parent"
+        android:inputType="textPassword"
+        android:layout_below="@+id/password"
         android:layout_height="wrap_content"
-        android:text="Courses"
-        android:textSize="25sp" />
-
-    <EditText
-        android:id="@+id/coursesInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></EditText>
+        android:layout_width="match_parent"></EditText>
 
     <TextView
         android:id="@+id/firstName"
+        android:layout_below="@+id/passwordInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="First Name"
-        android:textSize="25sp" />
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/black"
+        android:text="First Name:"
+        android:textSize="25dp" />
 
     <EditText
         android:id="@+id/firstNameInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></EditText>
+        android:layout_below="@+id/firstName"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"></EditText>
+
     <TextView
         android:id="@+id/lastName"
+        android:layout_below="@+id/firstNameInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Last Name"
-        android:textSize="25sp" />
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/black"
+        android:text="Last Name:"
+        android:textSize="25dp" />
 
     <EditText
         android:id="@+id/lastNameInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></EditText>
-    <TextView
-        android:id="@+id/phoneNumber"
-        android:layout_width="match_parent"
+        android:layout_below="@+id/lastName"
         android:layout_height="wrap_content"
-        android:text="Phone Number"
-        android:textSize="25sp" />
+        android:layout_width="match_parent"
+        ></EditText>
 
-    <EditText
-        android:id="@+id/phoneNumberInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="number"></EditText>
     <TextView
         android:id="@+id/address"
+        android:layout_below="@+id/lastNameInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Address"
-        android:textSize="25sp" />
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/black"
+        android:text="Address:"
+        android:textSize="25dp" />
 
     <EditText
         android:id="@+id/addressInput"
+        android:layout_below="@+id/address"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"></EditText>
+
+    <TextView
+        android:id="@+id/phoneNumber"
+        android:layout_below="@+id/addressInput"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></EditText>
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/black"
+        android:text="Phone:"
+        android:textSize="25dp" />
+
+    <EditText
+        android:id="@+id/phoneNumberInput"
+        android:layout_below="@+id/phoneNumber"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"></EditText>
+
+    <TextView
+        android:id="@+id/courses"
+        android:layout_below="@+id/phoneNumberInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/black"
+        android:text="Courses"
+        android:textSize="25dp" />
+
+    <EditText
+        android:id="@+id/coursesInput"
+        android:layout_below="@+id/courses"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"></EditText>
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/Register"
-        android:text="Register"/>
-    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Back"
-        android:id="@+id/BackButton"/>
+        android:layout_below="@+id/coursesInput"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="0dp"
+        android:text="Register"></Button>
 
-</LinearLayout>
+    <Button
+        android:id="@+id/BackButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="1dp"
+        android:text="Back" />
+</RelativeLayout>
