--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -3,27 +3,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StudentFragment">
+    tools:context=".StudentFragment" android:background="@drawable/background">
 
     <!-- TODO: Update blank fragment layout -->
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Logout"
-        android:id="@+id/LogoutButton"
-        android:layout_alignEnd="@+id/names"/>
+
     <TextView
         android:id="@+id/names"
-        android:layout_width="match_parent"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:layout_margin="20dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="List of all Tutors and the their courses" />
+        android:text="List of all available Tutors" />
 
     <ListView
+        android:layout_margin="20dp"
         android:id="@+id/tutorsListView"
-        android:layout_marginVertical="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/names"
-        android:layout_marginTop="-21dp" />
+        android:layout_alignParentStart="true"
+        android:layout_marginVertical="20dp"
+        android:layout_marginTop="-139dp"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+
+    <Button
+        android:id="@+id/LogoutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tutorsListView"
+        android:layout_alignEnd="@+id/names"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="321dp"
+        android:layout_marginBottom="4dp"
+        android:text="Logout" />
 
 </RelativeLayout>
