--- a/app/src/main/res/layout/fragment_view_scheduel.xml
+++ b/app/src/main/res/layout/fragment_view_scheduel.xml
@@ -1,48 +1,59 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/background"
     tools:context="com.example.tutoringproject.ViewScheduleFragment">
 
 
-    <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
-        android:id="@+id/RelConatiner"
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="wrap_content">
+
 
         <TextView
+            android:id="@+id/schedule"
+            android:fontFamily="sans-serif"
+            android:textColor="@color/black"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="All scheduels"
+            android:text="Your Schedule For this Week"
             android:textSize="25sp" />
 
-        <Button
-            android:id="@+id/homeButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Home" />
 
-        <Button
-            android:id="@+id/LogoutButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Logout" />
-
-
-<!--    <ListView-->
+    <!--    <ListView-->
 <!--        android:id="@+id/ListViewSched"-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="wrap_content"-->
 <!--        android:layout_marginTop="25sp" />-->
+    <Button
+        android:id="@+id/homeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:text="Home" />
+
+    <Button
+        android:id="@+id/LogoutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:text="Logout" />
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/RelContainer">
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/Sched_Recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/schedule"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="78dp"
         android:scrollbars="horizontal"
-        android:id="@+id/Sched_Recycler"
-        tools:context=".ViewScheduleFragment"/>
-    </LinearLayout>
+        tools:context=".ViewScheduleFragment" />
+</LinearLayout>
 
-</FrameLayout>
+</RelativeLayout>
