--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -3,45 +3,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StudentFragment" android:background="@drawable/background">
+    android:background="@drawable/background"
+    tools:context=".StudentFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
         android:id="@+id/names"
-        android:layout_centerHorizontal="true"
-        android:fontFamily="sans-serif-light"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:layout_margin="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="List of all available Tutors" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="sans-serif-light"
+        android:text="List of all available Tutors"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
-    <ListView
-        android:layout_margin="20dp"
-        android:id="@+id/tutorsListView"
+    <LinearLayout
+        android:id="@+id/container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/names"
-        android:layout_alignParentStart="true"
-        android:layout_marginVertical="20dp"
-        android:layout_marginTop="-139dp"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        android:layout_centerHorizontal="true">
 
-    <Button
-        android:id="@+id/LogoutButton"
+        <Button
+            android:id="@+id/Info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="My Info"
+            android:layout_marginRight="20dp"/>
+
+        <Button
+            android:id="@+id/LogoutButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Logout" />
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/tutorsListView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tutorsListView"
-        android:layout_alignEnd="@+id/names"
+        android:layout_below="@+id/container"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="2dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="321dp"
-        android:layout_marginBottom="4dp"
-        android:text="Logout" />
+
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
 
 </RelativeLayout>
