--- a/app/src/main/res/layout/fragment_welocme.xml
+++ b/app/src/main/res/layout/fragment_welocme.xml
@@ -6,11 +6,14 @@
     tools:context=".WelcomeFragment"
     android:background="@drawable/background"
     >
+
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/image"
-        android:layout_centerInParent="true"
+        android:layout_width="215dp"
+        android:layout_height="244dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="163dp"
         android:src="@drawable/logo2"></ImageView>
 
     <Button
@@ -21,7 +24,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="62dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="148dp"
         android:text="Student">
 
     </Button>
@@ -33,7 +36,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="62dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="148dp"
         android:text="Tutor">
 
 
