Fixed Several bugs

--- a/app/src/main/res/layout/fragment_tutor.xml
+++ b/app/src/main/res/layout/fragment_tutor.xml
@@ -66,5 +66,12 @@
         android:id="@+id/Info"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:text="Edit Profile"
+        android:id="@+id/Edit"/>
 
 </RelativeLayout>
