--- a/app/src/main/res/layout/fragment_view_student_profile.xml
+++ b/app/src/main/res/layout/fragment_view_student_profile.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context="com.example.tutoringproject.ViewStudentProfile">
+    tools:context="com.example.tutoringproject.ViewStudentFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
